--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
   responsive_sizer: ^3.2.0
+  flutter_advanced_calendar: ^1.4.1
 
 dev_dependencies:
   flutter_test:
