--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,10 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
   responsive_sizer: ^3.2.0
-  flutter_advanced_calendar: ^1.4.1
+  google_nav_bar: ^5.0.6
+  line_icons: ^2.0.3
+  get: ^4.6.6
+  fluentui_system_icons: ^1.1.223
 
 dev_dependencies:
   flutter_test:
@@ -69,9 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
