--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,9 @@ dependencies:
   google_nav_bar: ^5.0.6
   line_icons: ^2.0.3
   get: ^4.6.6
-  fluentui_system_icons: ^1.1.223
+  equatable: ^2.0.5
+  flutter_slidable: ^1.2.0
+  hydrated_bloc: ^9.1.3
 
 dev_dependencies:
   flutter_test:
